# four_wheel_bot_pkg

./: .gitattributes  CMakeLists.txt  README.md  package.xml
config/: 2d-lidar-point-cloud.rviz  camera_view.rviz  lidar_and_camera_config.rviz
launch/: ackermann_bot.launch.py  ackermann_circle_test.launch.py  circle_test.launch.py  diff_drive_bot.launch.py  robot_launch.py  robot_with_lidar_test.launch.py  rtn_teleop_launch.py  sonoma_teleop_launch.py  teleop_bot.launch.py  teleop_launch.py
models/: road_new_edited_scaled_down.mtl  road_new_edited_small_track.mtl
scripts/: 3d_pointcloud_test.py  check_lidar_topics.py  circle_mover.py  demo_info.py  keyboard_teleop.py  launch_bot.sh  lidar_test.py  lidar_test_3d.py  simple_teleop.py  teleop_twist_keyboard.py  test_manual.sh  view_camera.py
urdf/: ackermann_bot.urdf.xacro  diff_drive_bot.urdf.xacro  materials.xacro  properties.xacro
worlds/: road_track.sdf  simple_world.sdf  sonoma_empty.sdf
